--- a/repastcity3/repastcity.properties
+++ b/repastcity3/repastcity.properties
@@ -3,11 +3,11 @@
 # Not used yet
 LogFile=log_file_location
 
-# The root directory for all GIS data
-# GISDataDirectory=./data/gis_data/toy_city/ # Demo data
-
+# The root directory for all GIS data:
+# Demo city:
+GISDataDirectory=./data/gis_data/toy_city/
 # Larger dataset used for testing
-GISDataDirectory=./data/gis_data/leeds/
+#GISDataDirectory=./data/gis_data/leeds/
 
 # The name of the required shapefiles
 BuildingShapefile=buildings.shp
