--- a/repastcity.properties
+++ b/repastcity.properties
@@ -5,7 +5,7 @@ LogFile=log_file_location
 
 # The root directory for all GIS data:
 # Demo city:
-GISDataDirectory=./data/gis_data/toy_city/
+GISDataDirectory=./data/gis_data/leeds/
 # Larger dataset used for testing
 #GISDataDirectory=./data/gis_data/leeds/
 
