Implementing sim_com_sys model. Have added some wgs leeds data, this prevents a warning about projections.

--- a/repastcity.properties
+++ b/repastcity.properties
@@ -5,7 +5,7 @@ LogFile=log_file_location
 
 # The root directory for all GIS data:
 # Demo city:
-GISDataDirectory=./data/gis_data/leeds/
+GISDataDirectory=./data/gis_data/leeds_wgs/
 # Larger dataset used for testing
 #GISDataDirectory=./data/gis_data/leeds/
 
