Modified model to run from command line

--- a/run_dir/repastcity.properties
+++ b/run_dir/repastcity.properties
@@ -6,9 +6,10 @@ LogFile=log_file_location
 # Define how agents are to be created 
 AGENT_DEFINITION=random:1
 
+
 # The root directory for all GIS data:
 # Demo city:
-GISDataDirectory=./data/gis_data/leeds_wgs/
+GISDataDirectory=../data/gis_data/leeds_wgs/
 # Larger dataset used for testing
 #GISDataDirectory=./data/gis_data/leeds/
 
