Implemented communities, not tested yet though

--- a/repastcity.properties
+++ b/repastcity.properties
@@ -15,6 +15,7 @@ GISDataDirectory=./data/gis_data/leeds_wgs/
 # The name of the required shapefiles
 BuildingShapefile=buildings.shp
 RoadShapefile=roads.shp
+CommunityShapefile=communities-easel.shp
 
 # The names of some serialised cache files (stored with other GIS data)
 BuildingsRoadsCoordsCache=buildings_roads_coords_cache.serialised
