--- a/run_dir/repastcity.properties
+++ b/run_dir/repastcity.properties
@@ -4,8 +4,7 @@
 LogFile=log_file_location
 
 # Define how agents are to be created 
-AGENT_DEFINITION=random:1
-
+AGENT_DEFINITION=random:200
 
 # The root directory for all GIS data:
 # Demo city:
@@ -16,6 +15,7 @@ GISDataDirectory=../data/gis_data/leeds_wgs/
 # The name of the required shapefiles
 BuildingShapefile=buildings.shp
 RoadShapefile=roads.shp
+CommunityShapefile=communities-easel.shp
 
 # The names of some serialised cache files (stored with other GIS data)
 BuildingsRoadsCoordsCache=buildings_roads_coords_cache.serialised
