Adding functionality to sim_com_sys model. Nearly ready, just needs proper results output and agent motivation modelling.

--- a/repastcity.properties
+++ b/repastcity.properties
@@ -20,3 +20,7 @@ CommunityShapefile=communities-easel.shp
 # The names of some serialised cache files (stored with other GIS data)
 BuildingsRoadsCoordsCache=buildings_roads_coords_cache.serialised
 BuildingsRoadsCache=buildings_roads_cache.ser
+
+# Names for log files - not used because difficult to read properties before initialising the log files, hard coded instead.
+#LogInfo=model_log-info.txt
+#LogAll=model_log-all.txt
