Created Results.java which writes model results (a number of csv files) and also created offender data (now offenders are read in from a shapefile).

--- a/repastcity.properties
+++ b/repastcity.properties
@@ -3,8 +3,9 @@
 # Not used yet
 LogFile=log_file_location
 
-# Define how agents are to be created 
-AGENT_DEFINITION=random:1
+# Define how agents are to be created
+AGENT_DEFINITION=point:offenders.shp$repastcity3.agent.DefaultAgent
+#AGENT_DEFINITION=random:1
 
 # The root directory for all GIS data:
 # Demo city:
@@ -24,3 +25,9 @@ BuildingsRoadsCache=buildings_roads_cache.ser
 # Names for log files - not used because difficult to read properties before initialising the log files, hard coded instead.
 #LogInfo=model_log-info.txt
 #LogAll=model_log-all.txt
+
+# Names for output (results) files
+HouseData=house_data.csv
+CommunityData=community_data.csv
+BurglaryPoints=burglaries.csv
+AgentHomes=agent_homes.csv
