Implementing GA with MPJ. Have GA working (copied code from another NeISS project) and now need to configure Chromosome to run burglary model.

--- a/run_dir/repastcity.properties
+++ b/run_dir/repastcity.properties
@@ -4,8 +4,8 @@
 LogFile=log_file_location
 
 # Define how agents are to be created
-AGENT_DEFINITION=point:offenders.shp$repastcity3.agent.DefaultAgent
-#AGENT_DEFINITION=random:1
+#AGENT_DEFINITION=point:offenders.shp$repastcity3.agent.DefaultAgent
+AGENT_DEFINITION=random:1
 
 # The root directory for all GIS data:
 # Demo city:
