Not made any edits since book chapter written, these should have been committed some time ago.

--- a/repastcity.properties
+++ b/repastcity.properties
@@ -31,3 +31,4 @@ HouseData=house_data.csv
 CommunityData=community_data.csv
 BurglaryPoints=burglaries.csv
 AgentHomes=agent_homes.csv
+MetaData=meta.csv
