--- a/run_dir/repastcity.properties
+++ b/run_dir/repastcity.properties
@@ -31,3 +31,4 @@ HouseData=house_data.csv
 CommunityData=community_data.csv
 BurglaryPoints=burglaries.csv
 AgentHomes=agent_homes.csv
+MetaData=meta.csv
